Alteração no título do html e na opacidade dos links no css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
-  <title class="color-txt">Wide coverage location - responsivo</title>
+  <title class="color-txt">Wide coverage location - Responsivo</title>
 </head>
 <body>
   <header>
@@ -29,7 +29,7 @@
 
       <a class="learn-more">Learn more</a>
     </section>
-        <img src="./img/img.png" alt="image-congratulation" class="img">
+    <img src="./img/img.png" alt="image-congratulation" class="img">
 
   </main>
 </body>
